--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leo - Interaction Developer & Media Artist</title>
-    <!-- Google Fonts (Rounded Sans-serif font) -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -78,26 +77,37 @@
             font-weight: 600;
         }
 
-        /* Color Scheme */
-        .forest-mode {
-            background-color: #d1e8d4;
-            color: #456e4b;
+        /* Mode Switcher */
+        .mode-switcher {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
         }
 
-        .desert-mode {
-            background-color: #f1e1a6;
-            color: #c9a27d;
+        .mode-switcher label {
+            font-size: 1rem;
+            color: #333;
         }
 
-        .sea-mode {
-            background-color: #cce7f0;
-            color: #4a80a1;
+        .mode-switcher input {
+            display: none;
         }
 
-        .bauhaus-mode {
-            background-color: #fffae5;
-            color: #db5e52;
+        .mode-switcher input:checked + .mode-label {
+            font-weight: bold;
+            color: #007bff;
         }
+
+        /* Mode Styles */
+        .desert-mode { background-color: #f1e1a6; color: #c9a27d; }
+        .snoopy-mode { background-color: #f0f8ff; }
+        .sanrio-mode { background-color: #f9e6e6; }
+        .forest-mode { background-color: #d1e8d4; color: #456e4b; }
+        .gothic-mode { background-color: #3e3b31; color: #9f4b4b; }
+        .clean-mode { background-color: #f5f5f5; color: #333; }
 
         /* SVG Animations */
         .cloud-animation {
@@ -105,21 +115,17 @@
         }
 
         @keyframes moveClouds {
-            0% {
-                transform: translateX(-100%);
-            }
-            100% {
-                transform: translateX(100%);
-            }
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
         }
 
-        /* Soil Background SVG */
         .soil-background {
             width: 100%;
             height: 150px;
             background: linear-gradient(45deg, #87c480 30%, #82a52b 90%);
             border-radius: 10px;
         }
+
     </style>
 </head>
 <body>
@@ -135,7 +141,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="content">
+    <div class="content clean-mode">
         <header>
             <h1 class="main-title">I Am an Interaction Developer & Media Artist</h1>
         </header>
@@ -182,15 +188,101 @@
         <section id="section5">
             <h2>Contact</h2>
             <p>If you'd like to collaborate or have a project in mind, feel free to contact me.</p>
-            <p><strong>Email:</strong> <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:sakayama8880u09@icloud.com">sakayama8880u09@icloud.com</a></p>
         </section>
 
         <!-- Background with Soil -->
         <div class="soil-background"></div>
     </div>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer and Mode Switcher -->
+    <footer>
+        <div class="mode-switcher">
+            <label for="desert" class="mode-label">Desert Mode</label>
+            <input type="radio" id="desert" name="mode" onchange="switchMode('desert')">
+            <label for="snoopy" class="mode-label">Snoopy Mode</label>
+            <input type="radio" id="snoopy" name="mode" onchange="switchMode('snoopy')">
+            <label for="sanrio" class="mode-label">Sanrio Mode</label>
+            <input type="radio" id="sanrio" name="mode" onchange="switchMode('sanrio')">
+            <label for="forest" class="mode-label">Forest Mode</label>
+            <input type="radio" id="forest" name="mode" onchange="switchMode('forest')">
+            <label for="gothic" class="mode-label">Gothic Mode</label>
+            <input type="radio" id="gothic" name="mode" onchange="switchMode('gothic')">
+            <label for="clean" class="mode-label">Clean Mode</label>
+            <input type="radio" id="clean" name="mode" checked onchange="switchMode('clean')">
+        </div>
+    </footer>
+
+    <script>
+        // Define SVGs as constants
+        const desertSoilSVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Desert Soil -->
+                <rect width="100%" height="100%" fill="saddlebrown" />
+                <circle cx="250" cy="150" r="60" fill="burlywood" />
+            </svg>
+        `;
+
+        const desertDuneSVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Desert Dune -->
+                <path d="M0 150 Q250 50 500 150 Z" fill="peru" />
+            </svg>
+        `;
+
+        const snoopySVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Snoopy Character -->
+                <circle cx="100" cy="100" r="40" fill="white"></circle>
+                <rect x="90" y="90" width="20" height="20" fill="black"></rect>
+            </svg>
+        `;
+
+        const sanrioSVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Sanrio Character -->
+                <circle cx="100" cy="150" r="50" fill="#ff67ab"></circle>
+            </svg>
+        `;
+
+        const forestSVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Forest Background -->
+                <rect width="100%" height="100%" fill="#82e0aa"></rect>
+            </svg>
+        `;
+
+        const gothicSVG = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 500 300">
+                <!-- Gothic Background with Dark Clouds -->
+                <rect width="100%" height="100%" fill="#2d2a2a"></rect>
+                <circle cx="200" cy="50" r="20" fill="black" opacity="0.5"></circle>
+            </svg>
+        `;
+
+        // Store all SVGs in an object for easy access
+        const svgs = {
+            desertSoil: desertSoilSVG,
+            desertDune: desertDuneSVG,
+            snoopy: snoopySVG,
+            sanrio: sanrioSVG,
+            forest: forestSVG,
+            gothic: gothicSVG
+        };
+
+        function switchMode(mode) {
+            const body = document.body;
+            body.classList.remove('clean-mode', 'desert-mode', 'snoopy-mode', 'sanrio-mode', 'forest-mode', 'gothic-mode');
+            body.classList.add(mode + '-mode');
+            hideAllSVG();
+            document.getElementById(mode + '-svg').style.display = 'block';
+        }
+
+        function hideAllSVG() {
+            const svgs = document.querySelectorAll('svg');
+            svgs.forEach(svg => svg.style.display = 'none');
+        }
+    </script>
 </body>
 </html>
 
