--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,18 +13,16 @@
         /* Global Styles */
         body {
             font-family: 'Poppins', sans-serif;
-            transition: background-color 0.3s ease;
-            color: #333;
             margin: 0;
             padding: 0;
+            transition: background-color 0.3s ease;
         }
 
-        /* Mode Styles */
+        /* White and Black Mode Styles */
         .white-mode { background-color: white; color: #333; }
-        .space-mode { background-color: #000; color: white; }
-        .clean-mode { background-color: #f5f5f5; color: #333; }
+        .black-mode { background-color: black; color: white; }
 
-        /* Text Styling */
+        /* Content Sections */
         .content {
             padding: 20px;
             text-align: center;
@@ -29,6 +30,7 @@
 
         .content h1 {
             font-size: 2rem;
+            margin-bottom: 20px;
         }
 
         .content p {
@@ -36,7 +38,7 @@
             line-height: 1.6;
         }
 
-        /* Mode Switcher */
+        /* Navigation and Links */
         .mode-switcher {
             position: fixed;
             top: 20px;
@@ -56,113 +58,72 @@
             color: #ff67ab;
         }
 
-        /* Animation Styles */
-        @keyframes rocketMovement {
-            0% { transform: translateY(100vh); }
-            100% { transform: translateY(-100vh); }
+        /* Bio, Whois, Setlist Styles */
+        .bio, .whois, .setlist {
+            margin: 20px 0;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
         }
 
-        .rocket {
-            width: 50px;
-            animation: rocketMovement 5s linear infinite;
+        /* Main Section */
+        .main-clickable {
+            margin-top: 50px;
+            background-color: #ff67ab;
+            padding: 20px;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
-        .planet {
-            width: 80px;
-            animation: movePlanet 10s linear infinite;
+        .main-clickable a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
         }
 
-        @keyframes movePlanet {
-            0% { transform: translateX(-200px); }
-            100% { transform: translateX(200px); }
-        }
-
-        /* Dune and Palm for Desert Mode */
-        .dune { width: 100%; height: 200px; background: #f3d1a1; border-radius: 5px; }
-
-        .palmera {
-            width: 50px;
-            height: 80px;
-            background: #228b22;
-            border-radius: 10px;
-            position: absolute;
-            top: 100px;
-            left: 100px;
-        }
-
-        /* SVG Images */
-        .svg-container {
-            margin: 20px;
-            width: 100%;
-            max-width: 600px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .gothic-mode svg, .space-mode svg {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
-        }
-
-        .gothic-mode .kuromi {
-            fill: #333;
-        }
-
-        .gothic-mode .hello-kitty {
-            fill: #ff67ab;
+        .main-clickable a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body class="white-mode">
+    <!-- Content Sections -->
     <div class="content">
-        <!-- Who I Am Section -->
-        <h1>Who I Am</h1>
-        <p>Media artist and interaction developer from Santiago. I enjoy designing, building, and learning.</p>
-        <p>In my free time, I read books and work on creative projects.</p>
-        <p>For inquiries, <a href="mailto:your-email@icloud.com" style="color: blue;">Mailito</a>.</p>
+        <!-- Bio Section -->
+        <div class="bio">
+            <h1>Who I Am</h1>
+            <p>I'm a media artist and interaction developer from Santiago. Passionate about design, technology, and creativity. In my free time, I enjoy reading, traveling, and creating art.</p>
+        </div>
+
+        <!-- Whois Section -->
+        <div class="whois">
+            <h1>Whois</h1>
+            <p>Currently focused on interactive designs and coding. I enjoy solving complex problems with creative solutions. I work with open-source technologies and am always eager to learn more.</p>
+        </div>
+
+        <!-- Setlist Section -->
+        <div class="setlist">
+            <h1>Setlist</h1>
+            <p>Exploring different coding languages, frameworks, and design methodologies. Passionate about creating intuitive user experiences and functional systems.</p>
+        </div>
+
+        <!-- Main Clickable Section -->
+        <div class="main-clickable">
+            <a href="mailto:your-email@icloud.com">Contact Me</a>
+        </div>
     </div>
 
     <!-- Mode Switcher -->
     <div class="mode-switcher">
         <a href="javascript:void(0)" onclick="switchMode('white')">White Mode</a>
-        <a href="javascript:void(0)" onclick="switchMode('space')">Space Mode</a>
-        <a href="javascript:void(0)" onclick="switchMode('clean')">Clean Mode</a>
-        <a href="javascript:void(0)" onclick="switchMode('desert')">Desert Mode</a>
-        <a href="javascript:void(0)" onclick="switchMode('gothic')">Gothic Mode</a>
-    </div>
-
-    <!-- Space Mode SVGs -->
-    <div class="svg-container space-mode">
-        <svg class="rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path d="M12 1C6.48 1 3 3.58 3 6c0 1.58.58 2.85 1.52 3.86C4.59 10.69 4 11.92 4 13c0 2.78 2.22 5 5 5h6c2.78 0 5-2.22 5-5 0-1.08-.59-2.31-1.52-3.14C20.42 8.85 21 7.58 21 6c0-2.42-3.48-5-9-5z"></path>
-        </svg>
-
-        <!-- Planets -->
-        <svg class="planet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="none">
-            <circle cx="50" cy="50" r="40" stroke="white" stroke-width="4" fill="purple" />
-        </svg>
-    </div>
-
-    <!-- Desert Mode SVGs -->
-    <div class="dune"></div>
-    <div class="palmera"></div>
-
-    <!-- Gothic Mode SVGs -->
-    <div class="svg-container gothic-mode">
-        <svg class="kuromi" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path d="M12 2L3 7V14L12 22L21 14V7L12 2Z" />
-        </svg>
-        <svg class="hello-kitty" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <circle cx="12" cy="12" r="10" />
-        </svg>
+        <a href="javascript:void(0)" onclick="switchMode('black')">Black Mode</a>
     </div>
 
     <!-- Script for Mode Switching -->
     <script>
         function switchMode(mode) {
             const body = document.body;
-            body.classList.remove('white-mode', 'space-mode', 'clean-mode', 'desert-mode', 'gothic-mode');
+            body.classList.remove('white-mode', 'black-mode');
             body.classList.add(mode + '-mode');
         }
     </script>
@@ -172,5 +133,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
